Changed webpage title, header, and text

--- a/collection/templates/index.html
+++ b/collection/templates/index.html
@@ -2,11 +2,11 @@
 <!doctype html>
 <html>
 <head>
-  <title>My HelloWeb App</title>
+  <title>Katie's Store Name</title>
     <link rel="stylesheet" href="{% static 'css/style.css' %}" />
 </head>
 <body>
-  <h1>Hello World!</h1>
-  <p>I am a basic website.</p>
+  <h1>Clever Store Name Goes Here</h1>
+  <p>This will be an awesome store for handmade goods!</p>
 </body>
 </html>
