--- a/collection/templates/base.html
+++ b/collection/templates/base.html
@@ -17,10 +17,16 @@
         <ul>
           <li><a href="{% url 'home' %}">Home</a></li>
           <li><a href="{% url 'about' %}">About</a></li>
-          <li><a href="{%url 'contact' %}">Contact</a></li>
+          <li><a href="{% url 'contact' %}">Contact</a></li>
+          {% if user.is_authenticated %}
+          <li><a href="{% url 'auth_logout'%}">Logout</a></li>
+          {% else %}
+          <li><a href="{% url 'auth_login' %}">Login</a></li>
+          <li><a href="{% url 'registration_register' %}">Register</a></li>
+          {% endif %}
         </ul>
       </nav>
-    </header>    
+    </header>
   {% block content %}{% endblock content %}
   {% block footer %}{% endblock footer %}
 </body>
