Added user create item and required authentification of user to edit item

--- a/collection/templates/items/item_detail.html
+++ b/collection/templates/items/item_detail.html
@@ -7,7 +7,11 @@
 
   <h1>{{ item.name }}</h1>
   <p>{{ item.description }}</p>
-  <a href="{% url 'edit_item' slug=item.slug %}">
+  {% if user == item.user %}
+    <p>
+      <a href="{% url 'edit_item' slug=item.slug %}">
     Edit Me!
-  </a>
+      </a>
+    </p>
+  {% endif %}
 {% endblock content %}
