--- a/collection/static/css/style.css
+++ b/collection/static/css/style.css
@@ -3,6 +3,11 @@ h1 a {
     font-family: 'Lobster';
 }
 
+#content {
+  padding: 40px 15px;
+    text-align: center;
+}
+
 body {
   padding-left: 30px;
 }
