--- a/collection/templates/base.html
+++ b/collection/templates/base.html
@@ -1,33 +1,57 @@
 {% load staticfiles %}
-<!doctype html>
-<html>
-<head>
-  <title>
-    {% block title %}
-      Katie's Store
-    {% endblock title %}
-  </title>
-    <link rel="stylesheet" href="{% static 'css/style.css' %}" />
-    {% block header %}{% endblock header %}
-</head>
+<!DOCTYPE html>
+<!-- saved from url=(0050)http://getbootstrap.com/examples/starter-template/ -->
+<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <title>
+      {% block title %}
+        Katie McCoy Turner
+      {% endblock title %}
+    </title>
+    <link rel="shortcut icon" href="#" />
+   <link rel="stylesheet" href="{% static 'css/style.css' %}" />
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+      {% block header %}{% endblock header %}
+  </head>
 <body>
-  <header>
-      <h1>Katie's Store</h1>
-      <nav>
-        <ul>
-          <li><a href="{% url 'home' %}">Home</a></li>
-          <li><a href="{% url 'about' %}">About</a></li>
-          <li><a href="{% url 'contact' %}">Contact</a></li>
-          {% if user.is_authenticated %}
-          <li><a href="{% url 'auth_logout'%}">Logout</a></li>
-          {% else %}
-          <li><a href="{% url 'auth_login' %}">Login</a></li>
-          <li><a href="{% url 'registration_register' %}">Register</a></li>
-          {% endif %}
-        </ul>
-      </nav>
-    </header>
-  {% block content %}{% endblock content %}
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">Katie McCoy Turner</a>
+        </div>
+        <div id="navbar" class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+            <li><a class="active" href="{% url 'home' %}">Home</a></li>
+            <li><a href="{% url 'about' %}">About</a></li>
+            <li><a href="{% url 'contact' %}">Contact</a></li>
+            {% if user.is_authenticated %}
+            <li><a href="{% url 'auth_logout'%}">Logout</a></li>
+            {% else %}
+            <li><a href="{% url 'auth_login' %}">Login</a></li>
+            <li><a href="{% url 'registration_register' %}">Register</a></li>
+            {% endif %}
+          </ul>
+        </div><!--/.nav-collapse -->
+      </div>
+    </nav>
+
+    <div class="container" id="content">
+
+
+      {% block content %}{% endblock content %}
+    </div>
   {% block footer %}{% endblock footer %}
 </body>
 </html>
