--- a/collection/static/css/style.css
+++ b/collection/static/css/style.css
@@ -1,16 +1,21 @@
+
+
+
+
 h1 a {
     color: #FCA205;
     font-family: 'Lobster';
 }
 
-#content {
-  padding: 40px 15px;
-    text-align: center;
+body {
+  padding-top: 100px;
+}
+@media (max-width: 979px) {
+  body {
+    padding-top: 0px;
+  }
 }
 
-body {
-  padding-left: 30px;
-}
 
 .page-header {
     background-color: #ff9400;
@@ -24,13 +29,14 @@ body {
     text-decoration: none;
 }
 
-.content {
-    margin-left: 40px;
+.page-content {
+  margin-top:50;
+  height: 100%;
+  width: 100%;
+
 }
 
-h1, h2, h3, h4 {
-    font-family: 'Lobster', cursive;
-}
+
 
 .date {
     color: #40e0d0;
