--- a/collection/templates/index.html
+++ b/collection/templates/index.html
@@ -1,14 +1,7 @@
-{% extends 'base.html' %}
-{% load humanize %}
-{% block title %}
-  Homepage - {{block.super}}
-{% endblock title %}
 
-{% block content %}
-  {% for item in items %}
-  <h2><a href = "{% url 'item_detail' slug=item.slug %}">
-    {{ item.name }}
-  </a></h2>
-  <p>{{ item.description }}</p>
-  {% endfor %}
-{% endblock content %}
+{% extends 'base.html' %}
+
+
+{% block additional_styles %}
+
+{% endblock additional_styles %}
