worked on adding image file uploads

--- a/collection/templates/items/item_detail.html
+++ b/collection/templates/items/item_detail.html
@@ -14,4 +14,23 @@
       </a>
     </p>
   {% endif %}
+
+<!-- {% for upload in uploads %}
+  <img src="{{upload.image.url}}" alt=""/>
+  {% endfor %}-->
+
+  {% if social_accounts %}
+  <ul>
+    {% for social_account in social_accounts %}
+    <li>
+      <a href="http://{{social_account.network}}.com/{{social_account.username}}">
+        {{social_account.network|title}}
+      </a>
+    </li>
+    {% endfor %}
+  </ul>
+  {% endif %}
+
+
+
 {% endblock content %}
