--- a/collection/templates/gallery.html
+++ b/collection/templates/gallery.html
@@ -31,14 +31,31 @@
 
 
 {% block content %}
+<div class="container">
+
+      <!-- Page Header -->
+    <div class="row">
+        <div class="col-lg-12">
+            <h1 class="page-header">Gallery of Work</h1>
+        </div>
+    </div>
+  <div class="row">
 
   {% for item in items %}
+    <div class="crop col-md-6 portfolio-item">
+          <a href="#" class="thumbnail">
+            <img class="img-responsive" src="css/images/ferns.jpg" alt="">
+          </a>
+          <h3>
+              <a href="{% url 'item_detail' slug=item.slug %}">{{item.name}}</a>
+          </h3>
+          <p>{{item.description}}</p>
 
-  <h2><a href = "{% url 'item_detail' slug=item.slug %}">
-    {{ item.name }}
-  </a></h2>
-  <p>{{ item.description }}</p>
+
+    </div>
   {% endfor %}
 
+  </div>
 
 {% endblock content %}
+</div>
