--- a/collection/templates/gallery.html
+++ b/collection/templates/gallery.html
@@ -44,7 +44,7 @@
   {% for item in items %}
     <div class="crop col-md-6 portfolio-item">
           <a href="#" class="thumbnail">
-            <img class="img-responsive" src="#" alt="">
+            <img class="img-responsive" src="{{itemUrls|get_item:item.id}}" alt="">
           </a>
           <h3>
               <a href="{% url 'item_detail' slug=item.slug %}">{{item.name}}</a>
