updated about page

--- a/collection/templates/about.html
+++ b/collection/templates/about.html
@@ -9,7 +9,7 @@
 <header class="header-image">
         <div class="container">
             <h1>About the Artist</h1>
-            <h2>Katie McCoy Turner</h2>
+            <!--<h2>Katie McCoy Turner</h2>-->
         </div>
     </div>
 </header>
@@ -22,15 +22,16 @@
     <!-- First Featurette -->
     <div class="featurette" id="about">
         <img class="featurette-image img-circle img-responsive pull-right" src="{% static "collection/images/katie.jpg" %}" width = "500" height = "500" alt=""/>
-            <span class="text-muted">Will Catch Your Eye</span>
+            <span class="text-muted"></span>
         </h2>
-        <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+        <p class="lead">Hi, I am Katie. I live in Durham, North Carolina with my husband and our two dogs. I love texture, color, and patterns. I work with water colors, gouache, and block printing to create the style I want. I am constantly learning and exploring new techniques, mediums and different art forms. My life ambition is to never stop creating and growing.
+</p>
     </div>
 
     <hr class="featurette-divider">
 
     <!-- Second Featurette -->
-    <div class="featurette" id="services">
+    <!--<div class="featurette" id="services">
         <img class="featurette-image img-circle img-responsive pull-left" src="http://placehold.it/500x500">
         <h2 class="featurette-heading">The Second Heading
             <span class="text-muted">Is Pretty Cool Too.</span>
@@ -38,10 +39,10 @@
         <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
     </div>
 
-    <hr class="featurette-divider">
+    <hr class="featurette-divider">-->
 
     <!-- Third Featurette -->
-    <div class="featurette" id="contact">
+    <!--<div class="featurette" id="contact">
         <img class="featurette-image img-circle img-responsive pull-right" src="http://placehold.it/500x500">
         <h2 class="featurette-heading">The Third Heading
             <span class="text-muted">Will Seal the Deal.</span>
@@ -49,7 +50,7 @@
         <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
     </div>
 
-    <hr class="featurette-divider">
+    <hr class="featurette-divider">-->
 
     <!-- Footer -->
     <footer>
